revised_implementation/stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation sample template: Create a Amazon Linux 2 stack using a single EC2 instance.
  **WARNING** This template creates an Amazon EC2 instance. You will be billed for the AWS resources used if you create a stack from this template.
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: 'MyKeyPair'
    ConstraintDescription: Can contain only ASCII characters.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x
Resources:
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            amazon-linux-extras install nginx1 -y 
            yum install git -y
            systemctl enable nginx
            systemctl start nginx
            cd ~
            git clone https://github.com/iwouldrathercode/pilot.git
            cd pilot
            git checkout 00-application-provisioning
            cp revised_implementation/application/index.html /usr/share/nginx/html/index.html
      ImageId: 'ami-0b0dcb5067f052a63'
      InstanceType: 't2.micro'
      SecurityGroups:
        - !Ref WebServerSecurityGroup
      KeyName: 'MyKeyPair'
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
Outputs:
  WebsiteURL:
    Description: URL for newly created stack
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - WebServerInstance
          - PublicDnsName
